- added new RPC for reading an object without zero-padding, if object doesn't exist, and without replication
git-svn-id: https://xtreemfs.googlecode.com/svn/trunk@46 f8528748-c2c0-11dd-ba5c-d3b7c2b3b534